--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "php" : "8.*",
-        "laravel/framework" : "9.*"
+        "php" : "^8.1",
+        "laravel/framework" : "^9"
     },
     "autoload": {
         "psr-4": {
