--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php" : "^8.1",
-        "laravel/framework" : "^9"
+        "laravel/framework" : "^9.6",
+        "spatie/data-transfer-object" : "^3.7"
     },
     "autoload": {
         "psr-4": {
@@ -21,7 +22,7 @@
     "extra": {
         "laravel" : {
             "providers" : [
-              "ModularaServiceProvider"
+              "Vittozich\\Modulara\\ModularaServiceProvider"
             ]
         }
     }
